# catalog

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
project/catalog/: admin.py  forms.py  models.py  urls.py
project/catalog/controllers/: category.py  product.py
project/catalog/migrations/: 0001_initial.py  0002_alter_user_role.py  0003_user_fixed_category.py
project/catalog/templates/: categories.html  form.html  product_detail.html  products.html
project/catalog/views/: __init__.py  base.py  category.py  index.py  product.py
project/project/: settings.py  urls.py
